modified renamers GUI

--- a/renamewidget.ui
+++ b/renamewidget.ui
@@ -94,6 +94,9 @@
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_suffix">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>10</x>
