added ico and restructured void Send

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,18 +7,18 @@
     <x>0</x>
     <y>0</y>
     <width>352</width>
-    <height>334</height>
+    <height>241</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Помощник в олимпиадах</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="pushButton_renamer">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>100</y>
+      <y>10</y>
       <width>331</width>
       <height>91</height>
      </rect>
@@ -29,7 +29,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Переименовывание</string>
+     <string>Переименование</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_sender">
@@ -39,7 +39,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>200</y>
+      <y>110</y>
       <width>331</width>
       <height>91</height>
      </rect>
@@ -51,27 +51,6 @@
     </property>
     <property name="text">
      <string>Отправка</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>331</width>
-      <height>81</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>20</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Помощник в олимпиадах</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
