--- a/renamewidget.ui
+++ b/renamewidget.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Переименование</string>
   </property>
   <widget class="QPushButton" name="pushButton_upload">
    <property name="enabled">
